--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                 </div> -->
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -323,12 +323,12 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded d-flex h-100">
                         <div class="service-img rounded">
-                            <img class="img-fluid" src="img/service-1.jpg" alt="">
+                            <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <div class="btn-square rounded-circle mx-auto mb-3">
+                            <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
-                            </div>
+                            </div> -->
                             <h4 class="mb-3">Магистратура в Казахстане</h4>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Казахстан</p>
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
@@ -338,12 +338,12 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded d-flex h-100">
                         <div class="service-img rounded">
-                            <img class="img-fluid" src="img/service-2.jpg" alt="">
+                            <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <div class="btn-square rounded-circle mx-auto mb-3">
+                            <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
-                            </div>
+                            </div> -->
                             <h4 class="mb-3">Магистратура в Кыргызстане</h4>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
@@ -353,14 +353,14 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item rounded d-flex h-100">
                         <div class="service-img rounded">
-                            <img class="img-fluid" src="img/service-3.jpg" alt="">
+                            <img class="img-fluid" src="img/germany.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <div class="btn-square rounded-circle mx-auto mb-3">
+                            <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-5.png" alt="Icon">
-                            </div>
+                            </div> -->
                             <h4 class="mb-3">Стипендия в Германии</h4>
-                            <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии</p>
+                            <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии для одаренных молодых людей из развивающихся стран </p>
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
