--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                 <a href="contact.html" class="nav-item nav-link">Контакты</a>
                 <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
 
-                
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
@@ -719,7 +718,17 @@
             </div>
         </div>
     </div>  -->
-    <!-- Copyright End -->
+    <!-- Copyright Start -->
+    <div class="container-fluid copyright py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center mb-3 mb-md-0">
+                    <a class="border-bottom" href="#"></a>© 2023 Фонд Ханнса Зайделя. Все права защищены.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer End -->
 
 
     <!-- Back to Top -->
