--- a/info.html
+++ b/info.html
@@ -40,6 +40,32 @@
     <!-- Spinner End -->
 
 
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-dark text-light px-0 py-2">
+        <div class="row gx-0 d-none d-lg-flex">
+            <div class="col-lg-7 px-5 text-start">
+                <div class="h-100 d-inline-flex align-items-center me-4">
+                    <!-- <span class="fa fa-phone-alt me-2"></span> -->
+                    <!-- <span>+012 345 6789</span> -->
+                </div>
+                <div class="h-100 d-inline-flex align-items-center">
+                    <!-- <span class="far fa-envelope me-2"></span> -->
+                    <!-- <span>info@example.com</span> -->
+                </div>
+            </div>
+            <div class="col-lg-5 px-5 text-end">
+                <div class="h-100 d-inline-flex align-items-center mx-n2">
+                    <span>Подписывайтесь на нас:</span>
+                    <a class="btn btn-link text-light" href="https://www.facebook.com/HannsSeidelStiftungZentralasien/"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-link text-light" href="https://twitter.com/hsfoundationca"><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                    <a class="btn btn-link text-light" href="https://www.instagram.com/hanns_seidel_foundation_ca/"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Topbar End -->
+
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -50,13 +76,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Главная</a>
+                <a href="index.html" class="nav-item nav-link">Главная</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
                 <a href="contact.html" class="nav-item nav-link">Контакты</a>
-                <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
+                <a href="info.html" class="nav-item nav-link active">Информация Для Выпускников</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
@@ -234,6 +260,16 @@
                         <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Отправить</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copyright Start -->
+    <div class="container-fluid copyright py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center mb-3 mb-md-0">
+                    <a class="border-bottom" href="#"></a>© 2023 Фонд Ханнса Зайделя. Все права защищены.
                 </div>
             </div>
         </div>
