--- a/service.html
+++ b/service.html
@@ -39,6 +39,32 @@
     </div>
 
 
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-dark text-light px-0 py-2">
+        <div class="row gx-0 d-none d-lg-flex">
+            <div class="col-lg-7 px-5 text-start">
+                <div class="h-100 d-inline-flex align-items-center me-4">
+                    <!-- <span class="fa fa-phone-alt me-2"></span> -->
+                    <!-- <span>+012 345 6789</span> -->
+                </div>
+                <div class="h-100 d-inline-flex align-items-center">
+                    <!-- <span class="far fa-envelope me-2"></span> -->
+                    <!-- <span>info@example.com</span> -->
+                </div>
+            </div>
+            <div class="col-lg-5 px-5 text-end">
+                <div class="h-100 d-inline-flex align-items-center mx-n2">
+                    <span>Подписывайтесь на нас:</span>
+                    <a class="btn btn-link text-light" href="https://www.facebook.com/HannsSeidelStiftungZentralasien/"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-link text-light" href="https://twitter.com/hsfoundationca"><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a> -->
+                    <a class="btn btn-link text-light" href="https://www.instagram.com/hanns_seidel_foundation_ca/"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Topbar End -->
+
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
@@ -51,8 +77,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Главная</a>
-                <a href="about.html" class="nav-item nav-link active">Новости</a>
-                <a href="service.html" class="nav-item nav-link">Тренинги</a>
+                <a href="about.html" class="nav-item nav-link">Новости</a>
+                <a href="service.html" class="nav-item nav-link active">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
                 <a href="contact.html" class="nav-item nav-link">Контакты</a>
@@ -93,10 +119,10 @@
     <!-- Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-bold text-primary">Our Services</p>
-                <h1 class="display-5 mb-5">Services That We Offer For You</h1>
-            </div>
+<!--            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">-->
+<!--                <p class="fs-5 fw-bold text-primary">Our Services</p>-->
+<!--                <h1 class="display-5 mb-5">Services That We Offer For You</h1>-->
+<!--            </div>-->
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded d-flex h-100">
@@ -107,8 +133,8 @@
                             <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
                             </div>
-                            <h4 class="mb-3">Landscaping</h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <h4 class="mb-3">72-часовые курсы повышения квалификации для органов МСУ</h4>
+<!--                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>-->
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
                         </div>
                     </div>
@@ -122,8 +148,8 @@
                             <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
                             </div>
-                            <h4 class="mb-3">Pruning plants</h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <h4 class="mb-3">Школа молодых фермеров</h4>
+<!--                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>-->
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
                         </div>
                     </div>
@@ -137,8 +163,8 @@
                             <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-5.png" alt="Icon">
                             </div>
-                            <h4 class="mb-3">Irrigation & Drainage</h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <h4 class="mb-3">Онлайн-конференция/лекция на тему: «Структура государственного и местного управления в Баварии - обзор», г-н Раймунд Хельфрих, Проректор по учебной работе Баварской Школы государственного управления (Бавария, Германия)</h4>
+<!--                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>-->
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
                         </div>
                     </div>
@@ -152,8 +178,9 @@
                             <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-4.png" alt="Icon">
                             </div>
-                            <h4 class="mb-3">Garden Maintenance </h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <h4 class="mb-3">
+                                Онлайн-тренинг для личностного развития на тему: «ЭГО! Завышенная самооценка и адекватная уверенность в себе» г-на Роберта Гарайссена </h4>
+<!--                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>-->
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
                         </div>
                     </div>
@@ -167,8 +194,9 @@
                             <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-8.png" alt="Icon">
                             </div>
-                            <h4 class="mb-3">Green Technology</h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <h4 class="mb-3">
+                                Тренинг по разработке проектных предложений для привлечения финансирования</h4>
+<!--                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>-->
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
                         </div>
                     </div>
@@ -182,8 +210,8 @@
                             <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-2.png" alt="Icon">
                             </div>
-                            <h4 class="mb-3">Urban Gardening</h4>
-                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <h4 class="mb-3">Онлайн-конференция/семинар для личностного развития на тему: «Язык считается высшим выражениемчеловеческого существования»,</h4>
+<!--                            <p class="mb-4">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>-->
                             <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Read More</a>
                         </div>
                     </div>
@@ -242,6 +270,16 @@
                         <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Отправить</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copyright Start -->
+    <div class="container-fluid copyright py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center mb-3 mb-md-0">
+                    <a class="border-bottom" href="#"></a>© 2023 Фонд Ханнса Зайделя. Все права защищены.
                 </div>
             </div>
         </div>
