insert pages and change color text

--- a/QA.html
+++ b/QA.html
@@ -272,33 +272,38 @@
                                     Установление целевого использования земель производится специально уполномоченным государственным органом при предоставлении земельного участка в собственность или в пользование.
                                     Изменение целевого назначения земель производится тем же органом с внесением соответствующих изменений в документы, удостоверяющие права на земельный участок.
                                     Использование земельного участка не по целевому назначению не допускается, за исключением случаев предоставления земельных участков недропользователю для разработки полезных ископаемых и строительства объектов инфраструктуры, а также оператору электросвязи для строительства или установки сооружений связи.
-                                    [1] Объекты незавершенного строительства в системе объектов гражданских прав по законодательству Кыргызской Республики. В.А. Фудашкин. Кыргызско-Российский славянский университет
+                                    Объекты незавершенного строительства в системе объектов гражданских прав по законодательству Кыргызской Республики. В.А. Фудашкин. Кыргызско-Российский славянский университет
 
-                                    [2] См. там же.</p>
+                                    См. там же.</p>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Why is the sky blue?</span><span class="icon" aria-hidden="true"></span></button>
+                            <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Каков порядок присвоения классных чинов административным государственным служащим и муниципальным служащим, назначаемым в особом порядке?</span><span class="icon" aria-hidden="true"></span></button>
                             <div class="accordion-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                                <p>Согласно пункту 32 Положения о порядке присвоения, понижения и лишения классных чинов государственных гражданских служащих и муниципальных служащих Кыргызской Республики, утверждённого Указом Президента Кыргызской Республики от 30 декабря 2016 года № 308, лицам, назначаемым в особом порядке Президентом, Торага Жогорку Кенеша, Премьер-министром, председателем Верховного суда и председателем Конституционной палаты Верховного суда Кыргызской Республики, классные чины присваиваются без проведения оценки.
+
+ 
+
+                                    Лицам, назначаемым в соответствии с частями 7 и 8 статьи 24 Закона Кыргызской Республики «О государственной гражданской службе и муниципальной службе», классные чины присваиваются по результатам оценки деятельности, порядок которой определяется Правительством Кыргызской Республики.</p>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">Will we ever discover aliens?</span><span class="icon" aria-hidden="true"></span></button>
+                            <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">Правомерны ли действия глав айыл окмоту, которые хотят «работать со своей командой», по притеснению и увольнению ответственных секретарей и других муниципальных служащих?</span><span class="icon" aria-hidden="true"></span></button>
                             <div class="accordion-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                                <p>В соответствии с пунктом 3 статьи 45 Закона Кыргызской Республики «О государственной гражданской службе и муниципальной службе», смена в осударственных органах, органах местного самоуправления лиц, занимающих политические государственные должности, специальные государственные должности и политические муниципальные должности, не является основанием для освобождения, понижения в должности, ротации служащих, занимающих административные должности.</p>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">How much does the Earth weigh?</span><span class="icon" aria-hidden="true"></span></button>
+                            <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">Проводится ли при наложении дисциплинарного взыскания служебное расследование?</span><span class="icon" aria-hidden="true"></span></button>
                             <div class="accordion-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                                <p>В соответствии с частью 4 статьи 33 Закона Кыргызской Республики «О государственной гражданской службе и муниципальной службе», для установления или подтверждения факта совершения дисциплинарного проступка может быть проведено служебное расследование, назначаемое руководителем государственного органа, органа местного самоуправления, уполномоченным должностным лицом по собственной инициативе, по представлению комиссии по этике или по инициативе самого служащего.</p>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">How do airplanes stay up?</span><span class="icon" aria-hidden="true"></span></button>
+                            <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">Каковы обязанности руководителя государственного органа, органа местного самоуправления при возникновении конфликта интересов?</span><span class="icon" aria-hidden="true"></span></button>
                             <div class="accordion-content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                                <p>В соответствии со статьей 43 Закона Кыргызской Республики «О государственной гражданской службе и муниципальной службе», руководитель
+                                    государственного органа, органа местного самоуправления обязан принять меры по предотвращению конфликта интересов, инициировать проведение служебного расследования при наличии риска возникновения конфликта интересов, по результатам которого принять меры по устранению конфликта интересов.</p>
                             </div>
                         </div>
                     </div>
