--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 
 
     <style>
+        .dropdown-item{
+            transition: 0.9s;
+        }
+
+        .dropdown-item:hover{
+            color: #497bb4;
+        }
         @media (max-width: 991px) {
                 .navbar-collapse {
                     background-color: white;
@@ -106,7 +113,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="team.html" class="dropdown-item">Наша Команда</a>
-                        <a href="testimonial.html" class="dropdown-item">Отзызы</a>
+                        <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div>
