--- a/404.html
+++ b/404.html
@@ -30,6 +30,18 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+
+    <style>
+        .dropdown-item{
+            transition: 0.9s;
+        }
+
+        .dropdown-item:hover{
+            color: #497bb4;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -49,13 +61,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Главная</a>
+                <a href="index.html" class="nav-item nav-link">Главная</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">База Знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item">Книги</a>
                         <a href="presentations.html" class="dropdown-item">Презентации</a>
@@ -66,7 +78,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="team.html" class="dropdown-item">Наша Команда</a>
-                        <a href="testimonial.html" class="dropdown-item">Отзызы</a>
+                        <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div>
