--- a/QA.html
+++ b/QA.html
@@ -34,6 +34,13 @@
 
 
     <style>
+        .dropdown-item{
+            transition: 0.9s;
+        }
+
+        .dropdown-item:hover{
+            color: #497bb4;
+        }
         @media (max-width: 991px) {
                 .navbar-collapse {
                     background-color: white;
@@ -95,8 +102,8 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">Книги</a>
-                        <a href="quote.html" class="dropdown-item">Презентации</a>
+                        <a href="books.html" class="dropdown-item">Книги</a>
+                        <a href="presentations.html" class="dropdown-item">Презентации</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
@@ -104,7 +111,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="team.html" class="dropdown-item">Наша Команда</a>
-                        <a href="testimonial.html" class="dropdown-item">Отзызы</a>
+                        <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div>
