--- a/presentations.html
+++ b/presentations.html
@@ -41,6 +41,11 @@
         .dropdown-item:hover{
             color: #497bb4;
         }
+        @media (max-width: 991px) {
+            .navbar-collapse {
+                background-color: white;
+            }
+        }
     </style>
 
 
