--- a/books.html
+++ b/books.html
@@ -40,6 +40,11 @@
         .dropdown-item:hover{
             color: #497bb4;
         }
+        @media (max-width: 991px) {
+            .navbar-collapse {
+                background-color: white;
+            }
+        }
     </style>
 
 
