--- a/testimonials.html
+++ b/testimonials.html
@@ -40,6 +40,11 @@
         .dropdown-item:hover{
             color: #497bb4;
         }
+        @media (max-width: 991px) {
+            .navbar-collapse {
+                background-color: white;
+            }
+        }
     </style>
 
 </head>
@@ -131,7 +136,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-3 text-white mb-4 animated slideInDown">Testimonials</h1>
+            <h1 class="display-3 text-white mb-4 animated slideInDown">Отзывы</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
