--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item">Книги</a>
                         <a href="presentations.html" class="dropdown-item">Презентации</a>
+                        <a href="video.html" class="dropdown-item">Видео</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
