стипендиальные программы-казахстан

--- a/about.html
+++ b/about.html
@@ -100,10 +100,10 @@
                 <a href="index.html" class="nav-item nav-link">Главная</a>
                 <a href="about.html" class="nav-item nav-link active">Новости</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
-                <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
-                <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
+                <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
+                <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База Знаний</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="books.html" class="dropdown-item">Книги</a>
                         <a href="presentations.html" class="dropdown-item">Презентации</a>
@@ -112,14 +112,14 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О Нас</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О нас</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша Команда</a>
+                        <a href="team.html" class="dropdown-item">Наша команда</a>
                         <a href="testimonials.html" class="dropdown-item">Отзызы</a>
                         <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
                     </div>
                 </div>
-                <a href="info.html" class="nav-item nav-link">Информация Для Выпускников</a>
+                <a href="info.html" class="nav-item nav-link">Информация для выпускников</a>
 
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
