--- a/project.html
+++ b/project.html
@@ -168,7 +168,7 @@
                             </div> -->
                             <h4 class="mb-3">Магистратура в Казахстане</h4>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Казахстан</p>
-                            <a class="btn btn-sm" href="academy-kazakhstan.html" style="position: absolute; bottom: 22px;"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm" href="academy-kazakhstan.html"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
