dop-info btn fix

--- a/project.html
+++ b/project.html
@@ -168,7 +168,7 @@
                             </div> -->
                             <h5 class="mb-3">Магистратура в Казахстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Казахстан</p>
-                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i><span class="dop-info__btn-text"></span>Подробнее</span></a>
+                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                             </div> -->
                             <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
-                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i><span class="dop-info__btn-text">Подробнее</span></a>
+                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
